--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "varint-compression"
-version = "0.2.0"
+name = "vbyte"
+version = "0.1.0"
 edition = "2021"
 authors  = ["Nils Martel nilsmartel@yahoo.de"]
 
 description = "variable length integer compression"
-repository = "https://github.com/nilsmartel/varint-compression"
+repository = "https://github.com/nilsmartel/vbyte-compression"
 readme = "./README.md"
 license = "MIT OR Apache-2.0"
 keywords = ["compression", "int", "integer", "variable", "single"]
